--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 80vh;
 }
 
 .login-box {
@@ -11,7 +11,6 @@
   background: white;
   padding: 20px;
   border-radius: 10px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   text-align: center;
 }
 
@@ -47,25 +46,25 @@
 }
 
 .login-btn {
-  background: #007bff;
+  background: black;
   color: white;
 }
 
 .google-btn {
-  background: #ea4335;
+  background: black;
   color: white;
 }
 
 .login-btn:hover {
-  background: #0056b3;
+  background: rgb(102, 101, 101);
 }
 
 .google-btn:hover {
-  background: #c1351d;
+  background: rgb(102, 101, 101);
 }
 .signup-link {
   margin-top: 10px;
-  font-size: 14px;
+  font-size: 18px;
   color: #555;
 }
 
