--- a/src/pages/Signup.css
+++ b/src/pages/Signup.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 80vh;
 }
 
 .signup-box {
@@ -11,7 +11,6 @@
   background: white;
   padding: 20px;
   border-radius: 10px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   text-align: center;
 }
 
@@ -47,12 +46,17 @@
 }
 
 .signup-btn {
-  background: #28a745;
+  background: black;
   color: white;
 }
 
 .signup-btn:hover {
-  background: #1f8c3b;
+  background: rgb(102, 101, 101);
+}
+.login-link {
+  text-decoration: none;
+  cursor: pointer;
+  font-weight: bold;
 }
 
 
